# tusker

./: AppIcon.icns  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
assets/branding/tusker-composer-icon.icon/: icon.json
docs/plans/: 2026-02-03-db-viewer-design.md  2026-02-05-delete-table-design.md  2026-02-07-commits-ui-redesign.md  2026-02-25-auto-detect-local-databases-design.md  2026-02-25-auto-detect-local-databases.md  2026-02-26-schema-diagram-design.md  2026-02-26-schema-diagram.md  2026-02-28-multi-connection-design.md  2026-02-28-multi-connection.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: commit_store.rs  connection.rs  data.rs  discovery.rs  export.rs  mod.rs  schema.rs
src/components/: OnboardingOverlay.tsx  WelcomeScreen.tsx
src/components/commits/: ChangeCard.tsx
src/components/diagram/: DiagramTab.tsx  DiagramToolbar.tsx  SchemaEdge.tsx  SchemaLabelNode.tsx  TableNode.tsx  diagramUtils.ts  useAutoLayout.ts
src/components/layout/: AppLayout.tsx  Dashboard.tsx  HomePage.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TabContent.tsx  index.ts
src/components/modals/: CreateSchemaModal.tsx  CreateTableModal.tsx  DeleteProjectModal.tsx  DeleteTableModal.tsx  DiscoveryModal.tsx  DropSchemaModal.tsx  ExportConnectionsModal.tsx  ExportTableModal.tsx  HelpModal.tsx  ImportConnectionsModal.tsx  ProjectModal.tsx  SchemaInfoModal.tsx  StagedChangesModal.tsx  TruncateTableModal.tsx  index.ts
src/components/query/: QueryResults.tsx  QueryToolbar.tsx  SQLEditor.tsx  SavedQueriesPanel.tsx  index.ts
src/components/table/: DataTable.tsx  FilterPopover.tsx  ForeignKeyPreview.tsx  Pagination.tsx  RowDetailModal.tsx  SortPopover.tsx  TableCell.tsx  TableHeader.tsx  TableView.tsx  filterUtils.ts  index.ts
src/components/tabs/: CommitHistoryTab.tsx  ImportDataTab.tsx  QueryTab.tsx  StagedChangesTab.tsx
src/components/ui/: Button.tsx  Checkbox.tsx  CodeBlock.tsx  CommandPalette.tsx  ContextMenu.tsx  EnumSelect.tsx  Input.tsx  Modal.tsx  Popover.tsx  ProjectSpotlight.tsx  RelationSelect.tsx  Select.tsx  Toast.tsx  Toggle.tsx  Tooltip.tsx  TypedInput.tsx  index.ts
src/hooks/: index.ts  useConnectionHealthCheck.ts  useDatabase.ts  useKeyboard.ts  useUpdateCheck.ts
src/lib/: codemirrorTheme.ts  exportTable.ts  sql.ts  utils.ts
src/stores/: changesStore.ts  index.ts  onboardingStore.ts  projectStore.ts  queryStore.ts  uiStore.ts
src/types/: index.ts
