[package]
name = "tusker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_viewer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono", "uuid", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Secure credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# UUID for connection IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding for binary data
hex = "0.4"

# URL encoding for connection strings
urlencoding = "2"
