[package]
name = "tusker"
version = "0.3.0"
description = "A modern PostgreSQL database client"
authors = ["Jad"]
edition = "2021"

[[bin]]
name = "Tusker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_viewer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono", "uuid", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Secure credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# UUID for connection IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding for binary data
hex = "0.4"

# URL encoding for connection strings
urlencoding = "2"

# Local SQLite for commit history
rusqlite = { version = "0.31", features = ["bundled"] }

# SHA-256 hashing for commit IDs
sha2 = "0.10"

# Encryption for connection export/import
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Platform-specific directories
dirs = "5"
